updated composer.json file

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "ikki646i",
+    "name": "ikki646i/HTMl_Elements",
     "description": "supports HTML elements creation and can return a list of github repositories",
     "require": {
-        "php": "^5.3.3 || ^7.0",
+        "php": "^5.U3.3 || ^7.0",
         "another-vendor/package": "1.*"
     }
 }
