--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ikki646i/HTMl_Elements",
+    "name": "ikki646i/html_elements",
     "description": "supports HTML elements creation and can return a list of github repositories",
     "require": {
         "php": "^5.U3.3 || ^7.0",
