--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,6 @@
     "description": "supports HTML elements creation and can return a list of github repositories",
     "require": {
         "php": "^5.3.3 || ^7.0",
+        "vlucas/phpdotenv": "^2.5"
     }
 }
